[package]
name = "teeskins-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_json]
version = "1"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.ureq]
version = "*"
features = ["json"]

[dependencies.dotenv]
version = "0.15.0"
