[package]
name = "teeskins"
version = "0.1.0"
edition = "2021"

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "env_example"
]
homepage = "https://github.com/Teeskins/teeskins-rs"
description = "Wrapper for Teeskins public API"
repository = "https://github.com/Teeskins/teeskins-rs"
keywords = [
    "lib",
    "teeworlds",
    "teeskins"
]
categories = [
    "api-bindings"
]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde_json]
version = "1"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.ureq]
version = "2.5.0"
features = ["json"]

[dependencies.dotenv]
version = "0.15.0"
